--- a/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
+++ b/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
@@ -2,18 +2,39 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    
     android:orientation="vertical"
     
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+    
+    
+   <FrameLayout
+       android:layout_width="fill_parent"
+       android:layout_height="50dp"
+        >
 
-    <com.viewpagerindicator.TabPageIndicator
-        android:id="@+id/indicator"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        
-        style="@style/Tab" />
-    	
+       	    <ImageView 
+	        android:id="@+id/main_viewpager_background"
+	        android:background="@drawable/view_tab_gradient"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        android:scaleType="fitXY"
+	        android:contentDescription="@string/home_alternative_description"
+	      />
+       
+       
+       <com.viewpagerindicator.TabPageIndicator
+	        android:id="@+id/indicator"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"
+	        style="@style/Tab"
+	         />
+
+	    
+    </FrameLayout>
+    
     <android.support.v4.view.ViewPager
 		
         android:id="@+id/pager"
