--- a/EclipseProg/Scouthis/res/layout/delete_me_fragment.xml
+++ b/EclipseProg/Scouthis/res/layout/delete_me_fragment.xml
@@ -1,14 +1,65 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/asd"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CDB"
-    android:id="@+id/asd" >
+    android:background="#CDB" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="300px"
-        android:layout_height="300px"
-        android:src="@drawable/edo_tab_selected_pressed_green" />
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="100dp" >
+
+        <ImageView
+            android:id="@+id/main_viewpager_background"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@drawable/view_tab_gradient"
+            android:contentDescription="@string/home_alternative_description"
+            android:scaleType="fitXY" />
+
+        <LinearLayout
+            android:id="@+id/sdf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="@string/abc_action_bar_home_description" />
+
+            <ImageView
+                android:contentDescription="@string/abc_action_bar_up_description"
+                android:id="@+id/imageView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/edo_tab_selected_green" />
+            
+            <ImageView
+                android:contentDescription="@string/abc_action_bar_up_description"
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/edo_tab_selected_pressed_green" />
+            
+            <ImageView
+                
+                android:contentDescription="@string/abc_action_bar_up_description"
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/edo_tab_unselected_green" />
+            
+            <ImageView
+                android:contentDescription="@string/abc_action_bar_up_description"
+                android:id="@+id/imageView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/edo_tab_unselected_pressed_green" />
+            
+            
+            
+            
+        </LinearLayout>
+    </FrameLayout>
 
 </FrameLayout>
