--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -29,6 +29,9 @@
     
     <color name="orange_ligh">#FFE4C4</color>
     <color name="maroon">#800000</color>
+    
+    <color name="brown_dark">#301020</color>
+    
     <color name="alarm_day_colour">#3080A2</color>
     <color name="btn_background">#4CA5FF</color>
     <color name="btn_background_traspar">#704CA5FF</color>
