--- a/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
+++ b/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
@@ -1,49 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    
-    android:orientation="vertical"
-    
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    
-    
-   <FrameLayout
-       android:layout_width="fill_parent"
-       android:layout_height="50dp"
-        >
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-       	    <ImageView 
-	        android:id="@+id/main_viewpager_background"
-	        android:background="@drawable/view_tab_gradient"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        android:scaleType="fitXY"
-	        android:contentDescription="@string/home_alternative_description"
-	      />
-       
-       
-       <com.viewpagerindicator.TabPageIndicator
-	        android:id="@+id/indicator"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-	        style="@style/Tab"
-	         />
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="50dp" >
 
-	    
+        <ImageView
+            android:id="@+id/main_viewpager_background"
+            style="@style/Tab"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:contentDescription="@string/home_alternative_description"
+            android:scaleType="fitXY" />
+
+        <com.viewpagerindicator.TabPageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
     </FrameLayout>
-    
+
     <android.support.v4.view.ViewPager
-		
         android:id="@+id/pager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-     >
-     
-        
+        android:layout_weight="1" >
     </android.support.v4.view.ViewPager>
 
 </LinearLayout>
