--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -182,7 +182,7 @@
                             android:text="@string/gps_precision" />
 
                         <TextView
-                            android:id="@+id/txtDistance"
+                            android:id="@+id/txtDistanceGPS"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
