--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="azure_trasp">#704CA5FF</color>
     <color name="azure_light_trasp">#705CB5FF</color>
     
+    <color name="white">#FFF</color>
+    
     <color name="green">#009800</color>
     
     <color name="green_medium_dark">#006200</color>
