--- a/EclipseProg/Scouthis/res/values/strings_fragments.xml
+++ b/EclipseProg/Scouthis/res/values/strings_fragments.xml
@@ -53,12 +53,13 @@
     <string name="stepcounter_seehistory">Vedi storico</string>
     <string name="stepcounter_seehistory_description">Tocca il bottone e  rivedi tutti i tuoi percorsi!</string>
     <string name="stepcounter_statistic">Statistiche corsa</string>
-    <string name="stepcounter_steps_done">Passi effettuati</string>
-    <string name="stepcounter_distance_done">Distanza percorsa</string>
+    <string name="stepcounter_steps_done">Passi</string>
+    <string name="stepcounter_distance_done">Distanza</string>
+    <string name="stepcounter_speed_current">Velocità istantanea</string>
     <string name="stepcounter_speed_medium">Velocità media</string>
     <string name="stepcounter_speed">Velocità:</string>
     <string name="stepcounter_distance">Distanza:</string>
-    <string name="stepcounter_time_passed">Tempo trascorso</string>
+    <string name="stepcounter_time_passed">Tempo</string>
     <string name="stepcounter_massima">Non è importante se sei un leone o una gazzella, l\'importante è che cominci a correre</string>
 
     <!-- Strings related to findfriends fragment -->
